# OSForensics

./: .gitignore  GEMINI.md  Implementation.md  README.md  check_ollama_list.py  jpt.json  package-lock.json  pyproject.toml  requirements.txt  response.json  tails_report.json  tails_volume_deep_scan.py  test_agent.py  verify_tools.py
report/: CyberShield2026_Project_Report.html  feature_list.md
src/osforensics/: OLLAMA.md  __init__.py  agent_core.py  agent_memory.py  agent_tools.py  ai_timeline.py  api.py  api_routes.py  browser.py  cases.py  classifier.py  deleted.py  detector.py  extractor.py  live_memory.py  memory.py  multimedia.py  orchestrator.py  persistence.py  ram_analyzer.py  remote.py  report.py  reporting.py  sub_tools.py  tails.py  timeline.py
ui/: package-lock.json  package.json  vite.config.js
ui/electron/: main.js  preload.js
ui/src/: App.jsx  index.css
