[project]
name = "osforensics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google>=3.0.0",
    "google-generativeai>=0.8.6",
    "ollama>=0.6.1",
    "paramiko>=4.0.0",
    "pytsk3>=20250801",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.4",
    "uvicorn",
    "fastapi",
    "requests",
    "python-multipart",
]
